2011-06-26 Dietmar Warning
 * devices/bsim4/b4temp.c: zero init with TMALLOC instead of malloc
 * devices/bsim4/b4noi.c: correct init the correlated noise slot in noiseDens and
   lnNdens vector, bug should be reported to bsim4 developer team.

2011-06-25 Holger Vogt
 * ivars.c, ivars.h, inpcom.c, inp.c, util.c, util.h:
   rename internal fcn dirname() to ngdirname() because it is different
   from LINUX dirnam().
 * analog/file_source/cfunc.mod: remove implicit char to char* conversion

2011-06-25  Robert Larice
 * src/ngsconvert.c :
   ngsconvert.c, swallow type conversion warnings
   this case
	 (tp == VF_REAL) && iscomplex(v)
   was actually buggy, but couldn't ever happen

2011-06-25  Robert Larice
 * src/xspice/ipc/ipc.c ,
 * src/xspice/ipc/ipcsockets.c :
   ipc.c and ipcsockets.c, swallow type conversion warnings

2011-06-25  Robert Larice
 * src/frontend/plotting/graf.c :
   graf.c, swallow type conversion warnings

2011-06-25 Holger Vogt
 * main.c, defines.h: improved shutdown message for Windows GUI
 * cpitf.c, ngspice.h, ivars.c, ivars.h, analog/file_source/cfunc.mod:
   Add reading an environmental variable NGSPICE_INPUT to hold a path
   where input files are searched for (in addition to existing search paths),
   e.g. *.cir in -b and interactive mode, include and library files,
   filesource input file.

2011-06-24  Robert Larice
 * src/main.c ,
 * src/frontend/com_ahelp.c ,
 * src/frontend/inpcom.c ,
 * src/frontend/numparam/mystring.c ,
 * src/frontend/numparam/xpressn.c ,
 * src/frontend/trannoise/wallace.c ,
 * src/spicelib/parser/inp2r.c ,
 * src/xspice/icm/analog/file_source/cfunc.mod :
   swallow type conversion warnings

2011-06-24  Robert Larice
 * src/ciderlib/oned/oneprint.c ,
 * src/ciderlib/twod/twoprint.c :
   tiny rewrite, swallow type conversion warnings

2011-06-24  Robert Larice
 * src/frontend/com_sysinfo.c :
   tiny rewrite, swallow type conversion warnings

2011-06-23  Robert Larice
 * src/xspice/mif/mifgetvalue.c :